--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "crud>=0.1",
     "dotenv>=0.9.9",
     "fastapi>=0.115.12",
+    "jose>=1.0.0",
     "jwt>=1.3.1",
     "sqlalchemy>=2.0.40",
     "uvicorn>=0.34.0",
