--- a/requirements.txt
+++ b/requirements.txt
@@ -49,14 +49,5 @@ typing-extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
-fastapi~=0.115.12
-SQLAlchemy~=2.0.40
-crud~=0.1
-uvicorn~=0.34.0
-dotenv~=0.9.9
-python-dotenv~=1.1.0
-pydantic~=2.11.1
-jwt~=1.3.1
-PyJWT~=2.10.1
-GeoAlchemy2~=0.17.1
-alembic~=1.15.2
+GeoAlchemy2==0.17.1
+alembic==1.15.2
