--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,36 @@
+alembic==1.15.2
 annotated-types==0.7.0
-anyio==4.8.0
-cachecontrol==0.14.2
-cachetools==5.5.2
-certifi==2025.1.31
+anyio==4.9.0
+bcrypt==4.3.0
 cffi==1.17.1
-charset-normalizer==3.4.1
 click==8.1.8
+crud==0.1
 cryptography==44.0.2
 dnspython==2.7.0
 dotenv==0.9.9
 email-validator==2.2.0
-fastapi==0.115.11
-firebase-admin==6.7.0
-google-api-core==2.24.2
-google-api-python-client==2.164.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.20.1
-google-cloud-storage==3.1.0
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.69.1
-grpcio==1.71.0
-grpcio-status==1.71.0
+fastapi==0.115.12
+geoalchemy2==0.17.1
+greenlet==3.1.1
 h11==0.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
+hose==0.0.1
 idna==3.10
-msgpack==1.1.0
-proto-plus==1.26.1
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1-modules==0.4.1
+jose==1.0.0
+jwt==1.3.1
+mako==1.3.9
+markupsafe==3.0.2
+packaging==24.2
+passlib==1.7.4
+psycopg2==2.9.10
 pycparser==2.22
-pydantic==2.10.6
-pydantic-core==2.27.2
+pydantic==2.11.1
+pydantic-core==2.33.0
 pyjwt==2.10.1
-pyparsing==3.2.1
-python-dotenv==1.0.1
+python-dotenv==1.1.0
 python-multipart==0.0.20
-requests==2.32.3
-rsa==4.9
 sniffio==1.3.1
+sqlalchemy==2.0.40
 starlette==0.46.1
-typing-extensions==4.12.2
-uritemplate==4.1.1
-urllib3==2.3.0
+typing-extensions==4.13.0
+typing-inspection==0.4.0
 uvicorn==0.34.0
-GeoAlchemy2==0.17.1
-alembic==1.15.2
